--- a/swazam-webapp/src/main/webapp/account.xhtml
+++ b/swazam-webapp/src/main/webapp/account.xhtml
@@ -10,6 +10,7 @@
        
             <body>
                <h:form>
+                   <p:messages />
                             <h:outputText value="Account details"/>
 
                 
