--- a/swazam-webapp/src/main/webapp/account.xhtml
+++ b/swazam-webapp/src/main/webapp/account.xhtml
@@ -22,6 +22,9 @@
                     <h:outputLabel for="lastName" value="Lastname:"/>
                     <h:outputText  id="lastName" value="#{authenticationBean.user.lastName}"/>                    
                     
+                    <h:outputLabel for="id" value="Id"/>
+                    <h:outputText  id="id" value="#{authenticationBean.user.id}"/>
+                    
                     <h:outputLabel for="balance" value="Account balance:"/>
                     <h:outputText  id="balance" value="#{authenticationBean.user.account.balance}"/>                    
 
